--- a/src/components/Controls/alignButtons.css
+++ b/src/components/Controls/alignButtons.css
@@ -10,9 +10,10 @@
 }
 
 .cell {
-    width: 40px;
-    height: 30px;
-    line-height: 30px;
+    width: 80px;
+    height: 60px;
+    margin: 1px;
+    line-height: 60px;
     text-align: center;
 }
 
