seq end coded naively to simply reset. No option to continue a calculation after pressin

--- a/src/components/Dashboard/DashboardLayout.css
+++ b/src/components/Dashboard/DashboardLayout.css
@@ -15,10 +15,12 @@
     line-height: 25px;
     font-size: .65rem;
     color: #696969;
+    cursor: default;
 }
 
 .dashboard_input {
     height: 50px;
     line-height: 50px;
     font-size: 1.5rem;
+    cursor: default;
 }
